Make update the best

--- a/src/views/partials/navigation_new.hbs
+++ b/src/views/partials/navigation_new.hbs
@@ -51,8 +51,12 @@
 <!-- #header -->
 
 <style>
-  .btn #buttonNav{
-    padding: 0%;
-    
-  }
+  .btn {
+    background-color: rgb(234, 240, 241);
+    font-family: "Roboto", Helvetica, Arial, sans-serif;
+    font-weight: 80;
+    color: #00bfa5;
+    padding: 0px;
+    border-radius: 3px;
+}
 </style>
