--- a/src/views/partials/navigation_new.hbs
+++ b/src/views/partials/navigation_new.hbs
@@ -19,8 +19,8 @@
         </li>
         <li class="menu-has-children"><a href="#">{{user.name}}</a>
           <ul>
-            <li class="btn" id="buttonNav"><a href="#">Perfil</a></li>
-            <li class="btn" id="buttonNav"><a href="#">Competencias</a></li>
+            <li id="buttonNav"><a href="#">Perfil</a></li>
+            <li id="buttonNav"><a href="#">Competencias</a></li>
             <!--
               <li class="menu-has-children"><a href="#">Drop Down 2</a>
               <ul>
@@ -32,8 +32,8 @@
               </ul>
             </li>
             -->
-            <li class="btn" id="buttonNav"><a href="#">Configuración</a></li>
-            <li class="btn" id="buttonNav"><a href="/users/logout">Salir</a></li>
+            <li id="buttonNav"><a href="#">Configuración</a></li>
+            <li id="buttonNav"><a href="/users/logout">Salir</a></li>
             
           </ul>
         </li>
@@ -51,12 +51,5 @@
 <!-- #header -->
 
 <style>
-  .btn {
-    background-color: rgb(234, 240, 241);
-    font-family: "Roboto", Helvetica, Arial, sans-serif;
-    font-weight: 80;
-    color: #00bfa5;
-    padding: 0px;
-    border-radius: 3px;
-}
+  
 </style>
