Make update the best

--- a/src/views/partials/navigation_new.hbs
+++ b/src/views/partials/navigation_new.hbs
@@ -20,7 +20,7 @@
         <li class="menu-has-children"><a href="#">{{user.name}}</a>
           <ul>
             <li id="buttonNav"><a href="#">Perfil</a></li>
-            <li id="buttonNav"><a href="#">Competencias</a></li>
+            <li id="buttonNav"><a href="#">Desafíos</a></li>
             <!--
               <li class="menu-has-children"><a href="#">Drop Down 2</a>
               <ul>
