--- a/src/views/partials/navigation_new.hbs
+++ b/src/views/partials/navigation_new.hbs
@@ -19,7 +19,7 @@
         </li>
         <li class="menu-has-children"><a href="#">{{user.name}}</a>
           <ul>
-            <li id="buttonNav"><a href="#">Perfil</a></li>
+            <li id="buttonNav"><a href="/editProfile">Perfil</a></li>
             <li id="buttonNav"><a href="#">Desafíos</a></li>
             <!--
               <li class="menu-has-children"><a href="#">Drop Down 2</a>
