--- a/src/views/users/editProfile.hbs
+++ b/src/views/users/editProfile.hbs
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container text-center">
     <div class="jumbotron">
         <div class="row">
             <div class="col-md-6">
@@ -10,5 +10,27 @@
                 </div>
             </div>
         </div>
+        <hr>
+        <h3>INTRODUCCIÓN</h3>
+        <b>Deja que la comunidad ChallengeX de otros estudiantes e instructores te reconozca.</b>
+        <form>
+            <div class="form-group">
+                <label for="exampleInputEmail1">Nombre Completo</label>
+                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+                    placeholder="Enter email">
+                <small id="emailHelp" class="form-text text-muted">La comunidad te reconocerá por tu nombre completo</small>
+            </div>
+            <div class="form-group">
+                <label for="exampleInputPassword1">Foto de perfil</label>
+                <input type="file" class="form-control" id="exampleInputPassword1" placeholder="Password">
+            </div>
+            <div class="form-group form-check">
+                <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                <label class="form-check-label" for="exampleCheck1">Check me out</label>
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+        <hr>
+        
     </div>
 </div>
