--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -306,12 +306,13 @@ a:hover {
 }
 
 #bottonForm {
-    background-color: #00bfa5;
-    color: #ffffff;
+    background-color: #ffffff;
+    color: #00bfa5;
     padding: 15px;
     margin-bottom: 40px;
     font-size: 16px;
     border-radius: 3px;
+    border: 1px solid #00bfa5;
 }
 
 label {
