--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -39,7 +39,7 @@
             <div class="form-group">
               <input type="password" id="pwd" class="form-control" name="password" placeholder="Password">
             </div>
-            <button  class="btn btn-success btn-block">
+            <button  class="btn btn-success btn-block" id="bottonForm">
               Ingresar
             </button>
           </form>
@@ -92,7 +92,7 @@
                 <input type="password" id="pwd" class="form-control" name="confirm_password"
                   placeholder="Confirm Password*" value="{{confirm_password}}">
               </div>
-              <button  class="btn btn-success btn-block">Registrar</i>
+              <button  class="btn btn-success btn-block" id="bottonForm">Registrar</i>
               </button>
             </form>
           </div>
