--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -40,7 +40,7 @@
               <input type="password" id="pwd" class="form-control" name="password" placeholder="Password">
             </div>
             <button  class="btn btn-success btn-block" id="bottonForm">
-              Ingresar
+              <h3>Ingresar</h3>
             </button>
           </form>
         </div>
@@ -92,7 +92,7 @@
                 <input type="password" id="pwd" class="form-control" name="confirm_password"
                   placeholder="Confirm Password*" value="{{confirm_password}}">
               </div>
-              <button  class="btn btn-success btn-block" id="bottonForm">Registrar</i>
+              <button  class="btn btn-success btn-block" id="bottonForm"><h3>Registrar</h3></i>
               </button>
             </form>
           </div>
