--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -311,7 +311,7 @@ a:hover {
     padding: 10px;
     margin-bottom: 30px;
     font-size: 16px;
-    border-radius: 30px;
+    border-radius: 35px;
     border: 1px solid #00bfa5;
 }
 
@@ -321,13 +321,13 @@ a:hover {
     padding: 10px;
     margin-bottom: 30px;
     font-size: 16px;
-    border-radius: 30px;
+    border-radius: 35px;
     border: 1px solid #00bfa5;
 }
 
 label {
     font-family: 'Open Sans', sans-serif;
-    color: #ffffff;
+    color: #000000;
 }
 
 
