--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -330,6 +330,10 @@ label {
     color: #000000;
 }
 
+#buttonNav{
+    color: #000;
+}
+
 
 /*--------------------------------------------------------------
 # Navigation Menu
