--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -38,10 +38,10 @@
     <nav id="nav-menu-container">
       <ul class="nav-menu">
        
-        <li><a href="#about">ChallengeX</a></li>
-        <li><a href="#features">Pilares</a></li>
-        <li><a href="#team">Equipo</a></li>
-        <li><a href="/">Login</a></li>
+        <li id="buttonNav"><a href="#about">ChallengeX</a></li>
+        <li id="buttonNav"><a href="#features">Pilares</a></li>
+        <li id="buttonNav"><a href="#team">Equipo</a></li>
+        <li id="buttonNav"><a href="/">Login</a></li>
       </ul>
     </nav>
 
