--- a/src/views/partials/navigation_new.hbs
+++ b/src/views/partials/navigation_new.hbs
@@ -11,13 +11,13 @@
     <nav id="nav-menu-container">
       <ul class="nav-menu">
 
-        <li class="list-inline-item">
+        <li id="buttonNav" class="list-inline-item">
           <a href="/desafios">Retos globales</a>
         </li>
-        <li class="list-inline-item">
+        <li id="buttonNav" class="list-inline-item">
           <a href="/notes">Notas</a>
         </li>
-        <li class="menu-has-children"><a href="#">{{user.name}}</a>
+        <li id="buttonNav" class="menu-has-children"><a href="#">{{user.name}}</a>
           <ul>
             <li id="buttonNav"><a href="/editProfile">Perfil</a></li>
             <li id="buttonNav"><a href="#">Desafíos</a></li>
