--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -112,7 +112,7 @@
 <!-- About -->
 <section class="about" id="about">
   <div class="container text-center">
-    <h2 style="color:#00bfa5">
+    <h2 style="color:#000000">
       ChallengeX
     </h2>
 
@@ -153,7 +153,7 @@
 
 <section class="features" id="features">
   <div class="container">
-    <h2 class="text-center">
+    <h2 class="text-center" style="color:#000000">
       Pilares
     </h2>
 
@@ -287,7 +287,7 @@
 
 <section class="team" id="team">
   <div class="container">
-    <h2 class="text-center">
+    <h2 class="text-center" style="color:#000000">
       Equipo
     </h2>
 
