--- a/src/views/contact.hbs
+++ b/src/views/contact.hbs
@@ -80,7 +80,7 @@
 
   #about h2 {
     font-family: "Raleway", Helvetica, Arial, sans-serif;
-    color: #1de9b6;
+    color: #000000;
   }
 
   #about .info i {
