--- a/src/views/contact.hbs
+++ b/src/views/contact.hbs
@@ -137,9 +137,9 @@
 
   #about .form button[type="submit"] {
     background: #fff;
-    color: #0886bd;
+    color: #00bfa5;
     border: 0;
-    border: 1px solid #1de9b6;
+    border: 1px solid #00bfa5;
     padding: 10px 24px;
     -webkit-transition: 0.4s;
     -o-transition: 0.4s;
