--- a/src/views/contact.hbs
+++ b/src/views/contact.hbs
@@ -137,10 +137,11 @@
 
   #about .form button[type="submit"] {
     background: #fff;
-    color: #00bfa5;
+    color: #000000;
     border: 0;
     border: 1px solid #00bfa5;
     padding: 10px 24px;
+    border-radius: 3px;
     -webkit-transition: 0.4s;
     -o-transition: 0.4s;
     transition: 0.4s;
