--- a/src/views/users/editProfile.hbs
+++ b/src/views/users/editProfile.hbs
@@ -1,36 +1,114 @@
-<div class="container text-center">
-    <div class="jumbotron">
-        <div class="row">
-            <div class="col-md-6">
-                <h3>Editar Perfil</h3>
-            </div>
-            <div class="col-md-6">
-                <div class="btn">
-                    Ver Perfil
+<div class="container mt-4">
+    <div class="row">
+        <div class="col-md-8">
+            <div class="card" id="cardProfile">
+                <div class="card-header" id="cardProfileHeader">
+                    <h3>Editar Perfil</h3>
+                    <small>Completa tu perfil</small>
+                </div>
+                <div class="card-body">
+                    <form>
+                        <div class="input-group mb-3">
+                            <input id="campoForm" type="text" class="form-control" placeholder="Empresa">
+                            <input id="campoForm" type="text" class="form-control" placeholder="Username">
+                            <input id="campoForm" type="email" class="form-control" placeholder="Correo electrónico">
+                        </div>
+                        <div class="input-group mb-3">
+                            <input id="campoForm" type="text" class="form-control" placeholder="Nombres">
+                            <input id="campoForm" type="text" class="form-control" placeholder="Apellidos">
+                        </div>
+                        <div class="input-group mb-3">
+                            <input id="campoForm" type="address" class="form-control"
+                                placeholder="Dirección de domicilio actual">
+                        </div>
+                        <div class="input-group mb-3">
+                            <input id="campoForm" type="city" class="form-control" placeholder="Ciudad">
+                            <input id="campoForm" type="country" class="form-control" placeholder="País">
+                            <input id="campoForm" type="zipcode" class="form-control" placeholder="Código postal">
+                        </div>
+                        <div class="form-group">
+                            <div>
+                                <label for="comment">Acerca de mí:</label>
+                            </div>
+                            <textarea id="campoForm" class="form-control" rows="5" id="comment"></textarea>
+                        </div>
+                        <div class="text-right">
+                            <button type="submit" id="buttonProfile">Actualizar perfil</button>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
-        <hr>
-        <h3>INTRODUCCIÓN</h3>
-        <b>Deja que la comunidad ChallengeX de otros estudiantes e instructores te reconozca.</b>
-        <form>
-            <div class="form-group">
-                <label for="exampleInputEmail1">Nombre Completo</label>
-                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-                    placeholder="Enter email">
-                <small id="emailHelp" class="form-text text-muted">La comunidad te reconocerá por tu nombre completo</small>
+        <div class="col-md-4">
+            <div class="card" id="cardProfile">
+                <div class="card-header" id="cardProfileHeader">
+                    <div class="text-center">
+                        <img src="/img/team-3.png" alt="{{user.name}}" srcset="" class="rounded-circle" width="100px"
+                            height="100px" id="imagenSombra">
+                    </div>
+                    <div class="text-center mt-3">
+                        <h3>{{user.name}}</h3>
+                        <small>CEO/FOUNDER - ChallengeX</small>
+                    </div>
+                </div>
+                <div class="card-body">
+                    <p id="parrafoCompetition">Don't be scared of the truth because we need to restart the human
+                        foundation in truth And I love you like Kanye loves Kanye I love Rick Owens’ bed design but the
+                        back is...</p>
+                </div>
+                <div class="text-center">
+                    <label id="buttonProfile"><i class="fa fa-upload"></i> Actualizar imagen<input type="file"
+                            name="photoProfile" id="" style="width: 0px;height: 0px;"></label>
+                </div>
             </div>
-            <div class="form-group">
-                <label for="exampleInputPassword1">Foto de perfil</label>
-                <input type="file" class="form-control" id="exampleInputPassword1" placeholder="Password">
-            </div>
-            <div class="form-group form-check">
-                <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                <label class="form-check-label" for="exampleCheck1">Check me out</label>
-            </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
-        <hr>
-        
+        </div>
     </div>
 </div>
+
+<style>
+    #imagenSombra {
+        -webkit-box-shadow: 0px 9px 14px -2px rgba(0, 0, 0, 0.75);
+        -moz-box-shadow: 0px 9px 14px -2px rgba(0, 0, 0, 0.75);
+        box-shadow: 0px 9px 14px -2px rgba(0, 0, 0, 0.75);
+    }
+
+    #cardProfile {
+        color: black;
+        background: #ffffff;
+
+        border-radius: 3px;
+    }
+
+    #cardProfileHeader {
+        color: black;
+        background: #2196f3;
+    }
+
+    #buttonProfile {
+        border: 1px solid #2196f3;
+        background: #2196f3;
+        color: black;
+        padding: 8px;
+        font-family: "Roboto", Helvetica, Arial, sans-serif;
+        border-radius: 3px;
+    }
+
+    #buttonProfile:hover {
+        color: #ffffff;
+        background: #2196f3;
+    }
+
+    #buttonProfileImagen {
+        border: 1px solid #2196f3;
+        background: #2196f3;
+        color: black;
+        padding: 8px;
+        font-family: "Roboto", Helvetica, Arial, sans-serif;
+        border-radius: 30px;
+    }
+
+    #buttonProfileImagen:hover {
+        color: #ffffff;
+        background: #2196f3;
+    }
+</style>
