--- a/src/views/partials/navigation_new.hbs
+++ b/src/views/partials/navigation_new.hbs
@@ -12,7 +12,7 @@
       <ul class="nav-menu">
 
         <li id="buttonNav" class="list-inline-item">
-          <a href="/desafios">Retos globales</a>
+          <a href="/desafios">Desafíos</a>
         </li>
         <li id="buttonNav" class="list-inline-item">
           <a href="/notes">Notas</a>
