--- a/src/views/users/editProfile.hbs
+++ b/src/views/users/editProfile.hbs
@@ -7,30 +7,30 @@
                     <small>Completa tu perfil</small>
                 </div>
                 <div class="card-body">
-                    <form>
+                    <form form action="/users/update-profile/{{user._id}}?_method=PUT" method="POST">
                         <div class="input-group mb-3">
-                            <input id="campoForm" type="text" class="form-control" placeholder="Empresa">
-                            <input id="campoForm" type="text" class="form-control" placeholder="Username">
-                            <input id="campoForm" type="email" class="form-control" placeholder="Correo electrónico">
+                            <input id="campoForm" type="text" class="form-control" name="company" value="{{user.company}}" placeholder="Empresa">
+                            <input id="campoForm" type="text" class="form-control" name="username" value="{{user.username}}" placeholder="Username">
+                            <input id="campoForm" type="email" class="form-control" name="email" value="{{user.email}}" placeholder="Correo electrónico">
                         </div>
                         <div class="input-group mb-3">
-                            <input id="campoForm" type="text" class="form-control" placeholder="Nombres">
-                            <input id="campoForm" type="text" class="form-control" placeholder="Apellidos">
+                            <input id="campoForm" type="text" class="form-control" name="name" value="{{user.name}}" placeholder="Nombres">
+                            <input id="campoForm" type="text" class="form-control" name="lastname" value="{{user.lastname}}" placeholder="Apellidos">
                         </div>
                         <div class="input-group mb-3">
-                            <input id="campoForm" type="address" class="form-control"
+                            <input id="campoForm" type="address" class="form-control" name="address" value="{{user.address}}"
                                 placeholder="Dirección de domicilio actual">
                         </div>
                         <div class="input-group mb-3">
-                            <input id="campoForm" type="city" class="form-control" placeholder="Ciudad">
-                            <input id="campoForm" type="country" class="form-control" placeholder="País">
-                            <input id="campoForm" type="zipcode" class="form-control" placeholder="Código postal">
+                            <input id="campoForm" type="city" class="form-control" name="city" value="{{user.city}}" placeholder="Ciudad">
+                            <input id="campoForm" type="country" class="form-control" name="country" value="{{user.country}}" placeholder="País">
+                            <input id="campoForm" type="zipcode" class="form-control" name="zipcode" value="{{user.zipcode}}" placeholder="Código postal">
                         </div>
                         <div class="form-group">
                             <div>
                                 <label for="comment">Acerca de mí:</label>
                             </div>
-                            <textarea id="campoForm" class="form-control" rows="5" id="comment"></textarea>
+                            <textarea id="campoForm" class="form-control" name="aboutMe"  rows="5" id="comment"></textarea>
                         </div>
                         <div class="text-right">
                             <button type="submit" id="buttonProfile">Actualizar perfil</button>
@@ -47,17 +47,16 @@
                             height="100px" id="imagenSombra">
                     </div>
                     <div class="text-center mt-3">
-                        <h3>{{user.name}}</h3>
-                        <small>CEO/FOUNDER - ChallengeX</small>
+                        <h3>{{user.name}} {{user.lastname}}</h3>
+                        <small>{{user.username}}</small>
                     </div>
                 </div>
                 <div class="card-body">
-                    <p id="parrafoCompetition">Don't be scared of the truth because we need to restart the human
-                        foundation in truth And I love you like Kanye loves Kanye I love Rick Owens’ bed design but the
-                        back is...</p>
+                    <div class="text-justify">
+                        <p id="parrafoCompetition"> {{user.aboutMe}}</p></div>
                 </div>
                 <div class="text-center">
-                    <label id="buttonProfile"><i class="fa fa-upload"></i> Actualizar imagen<input type="file"
+                    <label id="buttonProfile"><i class="fa fa-upload"></i> Actualizar foto<input type="file"
                             name="photoProfile" id="" style="width: 0px;height: 0px;"></label>
                 </div>
             </div>
@@ -81,12 +80,12 @@
 
     #cardProfileHeader {
         color: black;
-        background: #2196f3;
+        background: #1de9b6;
     }
 
     #buttonProfile {
-        border: 1px solid #2196f3;
-        background: #2196f3;
+        border: 1px solid #1de9b6;
+        background: #1de9b6;
         color: black;
         padding: 8px;
         font-family: "Roboto", Helvetica, Arial, sans-serif;
@@ -95,12 +94,12 @@
 
     #buttonProfile:hover {
         color: #ffffff;
-        background: #2196f3;
+        background: #1de9b6;
     }
 
     #buttonProfileImagen {
-        border: 1px solid #2196f3;
-        background: #2196f3;
+        border: 1px solid #1de9b6;
+        background: #1de9b6;
         color: black;
         padding: 8px;
         font-family: "Roboto", Helvetica, Arial, sans-serif;
@@ -109,6 +108,6 @@
 
     #buttonProfileImagen:hover {
         color: #ffffff;
-        background: #2196f3;
+        background: #1de9b6;
     }
 </style>
