--- a/src/views/competitions/information.hbs
+++ b/src/views/competitions/information.hbs
@@ -1,42 +1,4 @@
-<div class="container">
-    <div class="jumbotron m-4 p-0" id="jumbotronCompetition">
-        <div class="container">
-            <div class="mt-2">
-                <img src="/img/logoWeb.png" alt=""> <small>Factured Code Competition</small>
-            </div>
-            <div>
-                <h3 class="mt-4">Two Sigma: Using News to Predict Stock Movements</h3>
-            </div>
-            <div>
-                <h5>Use news analytics to predict stock price performance</h5>
-            </div>
-            <div>
-                <div class="mt-4 mb-2">
-                    <img src="/img/empresas/thumb76_76.png" class="rounded" alt="Organización" srcset="" width="30px"
-                        height="auto"> Two Sigma:
-                    <span><b> 600</b> equipos</span>
-                    <span> -Hace 2 meses</span>
-                </div>
-            </div>
-        </div>
-        <div id="navigation">
-            <ul class="nav nav-tabs">
-                <li class="nav-item">
-                    <a class="nav-link " href="/competitions/theme1/general">General</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active" href="/competitions/theme1/information">+Información</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/competitions/theme1/discusion">Discusión</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/competitions/theme1/rules">Reglas</a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</div>
+{{> headCompetition}}
 
 <div class="container">
     <div class="card m-4" id="cardCompetition">
@@ -53,6 +15,10 @@
                 1100 people and has offices in New York, Hong Kong, Houston and London. For more information, please
                 visit <a href="https://www.twosigma.com/" target="_blank">www.twosigma.com.</a>
             </p>
+            <h3>David Siegel and John Overdeck are recognized pioneers in the fields of technology and investment
+                management. They have more than 40 years of experience in the development of computer-driven,
+                model-based trading systems. Together, David and John run the company. They work together to drive the
+                mission and strategy for Two Sigma, nurture talent and shape the company’s unique culture.s</h3>
         </div>
     </div>
 </div>
@@ -62,9 +28,7 @@
 
 
 <style>
- 
     #navigation {
         background: #ffff;
     }
-
 </style>
