--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -35,6 +35,11 @@ p {
     color: #030303;
 }
 
+#sombra {
+    -webkit-box-shadow: 0px 9px 14px -2px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 0px 9px 14px -2px rgba(0, 0, 0, 0.75);
+    box-shadow: 0px 9px 14px -2px rgba(0, 0, 0, 0.75);
+}
 h1 {
     font-size: 62px;
 }
@@ -306,8 +311,8 @@ a:hover {
 }
 
 #bottonForm {
-    background-color: #ffffff;
-    color: #00bfa5;
+    background-color: #00bfa5;
+    color: #000000;
     padding: 10px;
     margin-bottom: 30px;
     font-size: 16px;
@@ -317,7 +322,7 @@ a:hover {
 
 #bottonForm:hover{
     background-color: #00bfa5;
-    color: #000000;
+    color: #ffffff;
     padding: 10px;
     margin-bottom: 30px;
     font-size: 16px;
