--- a/src/views/competitions/rules.hbs
+++ b/src/views/competitions/rules.hbs
@@ -1,45 +1,12 @@
-<div class="container">
-    <div class="jumbotron m-4 p-0" id="jumbotronCompetition">
-        <div class="container">
-            <div class="mt-2">
-                <img src="/img/logoWeb.png" alt=""> <small>Factured Code Competition</small>
-            </div>
-            <div>
-                <h3 class="mt-4">Two Sigma: Using News to Predict Stock Movements</h3>
-            </div>
-            <div>
-                <h5>Use news analytics to predict stock price performance</h5>
-            </div>
-            <div>
-                <div class="mt-4 mb-2">
-                    <img src="/img/empresas/thumb76_76.png" class="rounded" alt="Organización" srcset="" width="30px"
-                        height="auto"> Two Sigma:
-                    <span><b> 600</b> equipos</span>
-                    <span> -Hace 2 meses</span>
-                </div>
-            </div>
-        </div>
-        <div id="navigation">
-            <ul class="nav nav-tabs">
-                <li class="nav-item">
-                    <a class="nav-link" href="/competitions/theme1/general">General</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/competitions/theme1/information">+Información</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/competitions/theme1/discusion">Discusión</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active" href="/competitions/theme1/rules">Reglas</a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</div>
+{{> headCompetition}}
 
 <div class="container">
     <div class="card m-4" id="cardCompetition">
+        <div class="jumbotron text-center p-3 m-5" id="jumbotronCompetition">
+            <p id="parrafoCompetition">By clicking on the "I understand and accept" button below, you are indicating that you agree to be bound
+                with the above rules.</p>
+                <button id="bottonForm">Entiendo y Acepto la Reglas</button>
+        </div>
         <div class="card-header p-2" id="desafiosActivos">
             <h5>Rules</h5>
         </div>
@@ -432,11 +399,7 @@
 
 
 <style>
-    
-
     #navigation {
         background: #ffff;
     }
-
-    
 </style>
