--- a/src/views/users/editProfile.hbs
+++ b/src/views/users/editProfile.hbs
@@ -9,28 +9,37 @@
                 <div class="card-body">
                     <form form action="/users/update-profile/{{user._id}}?_method=PUT" method="POST">
                         <div class="input-group mb-3">
-                            <input id="campoForm" type="text" class="form-control" name="company" value="{{user.company}}" placeholder="Empresa">
-                            <input id="campoForm" type="text" class="form-control" name="username" value="{{user.username}}" placeholder="Username">
-                            <input id="campoForm" type="email" class="form-control" name="email" value="{{user.email}}" placeholder="Correo electrónico">
+                            <input id="campoForm" type="text" class="form-control" name="company"
+                                value="{{user.company}}" placeholder="Empresa">
+                            <input id="campoForm" type="text" class="form-control" name="username"
+                                value="{{user.username}}" placeholder="Username">
+                            <input id="campoForm" type="email" class="form-control" name="email" value="{{user.email}}"
+                                placeholder="Correo electrónico">
                         </div>
                         <div class="input-group mb-3">
-                            <input id="campoForm" type="text" class="form-control" name="name" value="{{user.name}}" placeholder="Nombres">
-                            <input id="campoForm" type="text" class="form-control" name="lastname" value="{{user.lastname}}" placeholder="Apellidos">
+                            <input id="campoForm" type="text" class="form-control" name="name" value="{{user.name}}"
+                                placeholder="Nombres">
+                            <input id="campoForm" type="text" class="form-control" name="lastname"
+                                value="{{user.lastname}}" placeholder="Apellidos">
                         </div>
                         <div class="input-group mb-3">
-                            <input id="campoForm" type="address" class="form-control" name="address" value="{{user.address}}"
-                                placeholder="Dirección de domicilio actual">
+                            <input id="campoForm" type="address" class="form-control" name="address"
+                                value="{{user.address}}" placeholder="Dirección de domicilio actual">
                         </div>
                         <div class="input-group mb-3">
-                            <input id="campoForm" type="city" class="form-control" name="city" value="{{user.city}}" placeholder="Ciudad">
-                            <input id="campoForm" type="country" class="form-control" name="country" value="{{user.country}}" placeholder="País">
-                            <input id="campoForm" type="zipcode" class="form-control" name="zipcode" value="{{user.zipcode}}" placeholder="Código postal">
+                            <input id="campoForm" type="city" class="form-control" name="city" value="{{user.city}}"
+                                placeholder="Ciudad">
+                            <input id="campoForm" type="country" class="form-control" name="country"
+                                value="{{user.country}}" placeholder="País">
+                            <input id="campoForm" type="zipcode" class="form-control" name="zipcode"
+                                value="{{user.zipcode}}" placeholder="Código postal">
                         </div>
                         <div class="form-group">
                             <div>
                                 <label for="comment">Acerca de mí:</label>
                             </div>
-                            <textarea id="campoForm" class="form-control" name="aboutMe"  rows="5" id="comment"></textarea>
+                            <textarea id="campoForm" class="form-control" name="aboutMe" rows="5"
+                                id="comment"></textarea>
                         </div>
                         <div class="text-right">
                             <button type="submit" id="buttonProfile">Actualizar perfil</button>
@@ -44,7 +53,7 @@
                 <div class="card-header" id="cardProfileHeader">
                     <div class="text-center">
                         <img src="/img/team-3.png" alt="{{user.name}}" srcset="" class="rounded-circle" width="100px"
-                            height="100px" id="imagenSombra">
+                            height="100px" id="sombra">
                     </div>
                     <div class="text-center mt-3">
                         <h3>{{user.name}} {{user.lastname}}</h3>
@@ -53,7 +62,14 @@
                 </div>
                 <div class="card-body">
                     <div class="text-justify">
-                        <p id="parrafoCompetition"> {{user.aboutMe}}</p></div>
+                        <p id="parrafoCompetition"> {{user.aboutMe}}</p>
+                    </div>
+                    <ul class="list-group">
+                        <li class="list-group-item"><b>Empresa:</b> {{user.company}}</li>
+                        <li class="list-group-item"><b>País:</b> {{user.country}}</li>
+                        <li class="list-group-item"><b>Ciudad:</b> {{user.city}}</li>
+                        
+                    </ul>
                 </div>
                 <div class="text-center">
                     <label id="buttonProfile"><i class="fa fa-upload"></i> Actualizar foto<input type="file"
@@ -65,12 +81,6 @@
 </div>
 
 <style>
-    #imagenSombra {
-        -webkit-box-shadow: 0px 9px 14px -2px rgba(0, 0, 0, 0.75);
-        -moz-box-shadow: 0px 9px 14px -2px rgba(0, 0, 0, 0.75);
-        box-shadow: 0px 9px 14px -2px rgba(0, 0, 0, 0.75);
-    }
-
     #cardProfile {
         color: black;
         background: #ffffff;
