--- a/src/views/partials/headCompetition.hbs
+++ b/src/views/partials/headCompetition.hbs
@@ -55,7 +55,7 @@
             <div class="modal-body text-center">
                 <p id="parrafoCompetition">By clicking on the "I understand and accept" button below, you are indicating
                     that you agree to be bound to the <br> <a href="/competitions/theme1/rules">competition rules.</a></p>
-                <button id="bottonForm">Entiendo y Acepto la Reglas</button>
+                <button id="bottonForm" data-dismiss="modal">Entiendo y Acepto la Reglas</button>
             </div>
 
         </div>
